# cmake-ci-test

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  build.ps1
res/: cmake_test.desktop
src/: main.cpp  mainwindow.cpp  mainwindow.h
